myapp.yaml
#use docker login cmd and provide user and pass to get the docker hub access to the bastionhost server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: rajasekhar23/myapp:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8321
