medical-insurance-deployment.yaml
#use docker login cmd and provide user and pass to get the docker hub access to the bastionhost server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-insurance
  labels:
    app: medical-insurance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical-insurance
  template:
    metadata:
      labels:
        app: medical-insurance
    spec:
      containers:
      - name: medical-insurance
        image: rajasekhar23/mlops-medical-insurance:3.11.9-slim-bookworm
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8321
---
apiVersion: v1
kind: Service
metadata:
   name: medical-insurance
   namespace: default
spec:
   type: ClusterIP
   selector:
      app: medical-insurance
   ports:
      - port: 8321
        targetPort: 8321
