ingress-example.yaml
#helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
#helm install my-ingress-controller ingress-nginx/ingress-nginx
#This is Ingress-nginx resource Manifest
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: speedcloud.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-entrypoint
            port:
              number: 8321
  - host: medical.speedcloud.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-entrypoint
            port:
              number: 8321
