ingress-speedcloud-in.yaml
#Documentation url
#https://kubernetes.github.io/ingress-nginx/deploy/
#If you have Helm, you can deploy the ingress controller with the following command:
# helm upgrade --install ingress-nginx ingress-nginx \
#  --repo https://kubernetes.github.io/ingress-nginx \
#  --namespace ingress-nginx --create-namespace
#This is Ingress-nginx resource Manifest
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - speedcloud.in
    secretName: medical-secret
  rules:
  - host: speedcloud.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: medical-insurance
            port:
              number: 8321
  - host: medical.speedcloud.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: medical-insurance
            port:
              number: 8321
  - host: todolist.speedcloud.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-list
            port:
              number: 3000
